<resources>
    <string name="app_name">Nota Dinas</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="password_ek1_string">Password</string>
    <string name="masukan_password_string">Masukan Password</string>
    <string name="nip_string">NIP</string>
    <string name="masukan_nip_string">Masukan NIP</string>
    <string name="masuk_akun_string">Masuk Akun</string>
    <string name="masuk_string"> Masuk</string>
    <string name="surat_masuk_ek1_string">SuratMasuk</string>
    <string name="surat_keluar_string">SuratKeluar</string>
    <string name="arsip_string">Arsip</string>
    <string name="buat_nota_ek1_string">BuatNota</string>
    <string name="nama_string">Nama</string>
    <string name="_3411191149_string">3411191149</string>
    <string name="hizkia_syaukani_string">Hizkia Syaukani</string>
    <string name="nip_ek1_string">NIP</string>
    <string name="pangkat_string">Pangkat</string>
    <string name="purwakarta__08_juli_2001_string">Purwakarta /08 Juli 2001</string>
    <string name="ttl_string">TTL</string>
    <string name="i_string">I</string>
    <string name="jabatan_string">Jabatan</string>
    <string name="staff_ahli_string">Staff Ahli</string>
    <string name="unit_kerja_string">Unit Kerja</string>
    <string name="kominfo_string">Kominfo</string>
    <string name="buat_nota_ek6_string">Buat Nota</string>
    <string name="pilih_tujaun_string">Pilih Tujaun</string>
    <string name="kepada_string">Kepada</string>
    <string name="pilih_pengirim_string">Pilih Pengirim</string>
    <string name="dari_string">Dari</string>
    <string name="isi_periihal_string">Isi Periihal</string>
    <string name="perihal_string">Perihal</string>
    <string name="jumlah_lampiran_string">Jumlah Lampiran</string>
    <string name="lampiran_string">Lampiran</string>
    <string name="isi_kota_pembuat_string">Isi Kota Pembuat</string>
    <string name="kota_pembuat_string">Kota Pembuat</string>
    <string name="pilih_kerahasiaan_string">Pilih Kerahasiaan</string>
    <string name="kerahasiaan_string">Kerahasiaan</string>
    <string name="pilih_prioritas_string">Pilih Prioritas</string>
    <string name="prioritas_string">Prioritas</string>
    <string name="selanjutnya_string">Selanjutnya</string>
    <string name="surat_masuk_ek3_string">SuratMasuk</string>
    <string name="surat_keluar_ek1_string">SuratKeluar</string>
    <string name="arsip_ek1_string">Arsip</string>
    <string name="buat_nota_ek8_string">BuatNota</string>
    <string name="surat_masuk_ek7_string">Surat Masuk</string>
    <string name="kepala_departemen_string">Kepala Departemen</string>
    <string name="perihal_surat_string">Perihal Surat</string>
    <string name="kepala_departemen_ek1_string">Kepala Departemen</string>
    <string name="perihal_surat_ek1_string">Perihal Surat</string>
    <string name="kepala_departemen_ek2_string">Kepala Departemen</string>
    <string name="perihal_surat_ek2_string">Perihal Surat</string>
    <string name="surat_masuk_ek9_string">SuratMasuk</string>
    <string name="surat_keluar_ek2_string">SuratKeluar</string>
    <string name="arsip_ek2_string">Arsip</string>
    <string name="buat_nota_ek10_string">BuatNota</string>
    <string name="surat_keluar_ek6_string">Surat Keluar</string>
    <string name="kepala_departemen_ek3_string">Kepala Departemen</string>
    <string name="perihal_surat_ek3_string">Perihal Surat</string>
    <string name="kepala_departemen_ek4_string">Kepala Departemen</string>
    <string name="perihal_surat_ek4_string">Perihal Surat</string>
    <string name="kepala_departemen_ek5_string">Kepala Departemen</string>
    <string name="perihal_surat_ek5_string">Perihal Surat</string>
    <string name="surat_masuk_ek11_string">SuratMasuk</string>
    <string name="surat_keluar_ek7_string">SuratKeluar</string>
    <string name="arsip_ek3_string">Arsip</string>
    <string name="buat_nota_ek12_string">BuatNota</string>
    <string name="arsip_ek7_string">Arsip</string>
    <string name="kepala_departemen_ek6_string">Kepala Departemen</string>
    <string name="perihal_surat_ek6_string">Perihal Surat</string>
    <string name="kepala_departemen_ek7_string">Kepala Departemen</string>
    <string name="perihal_surat_ek7_string">Perihal Surat</string>
    <string name="kepala_departemen_ek8_string">Kepala Departemen</string>
    <string name="perihal_surat_ek8_string">Perihal Surat</string>
    <string name="surat_masuk_ek13_string">SuratMasuk</string>
    <string name="surat_keluar_ek8_string">SuratKeluar</string>
    <string name="arsip_ek8_string">Arsip</string>
    <string name="buat_nota_ek14_string">BuatNota</string>
    <string name="uraian_ek3_string">Uraian</string>
    <string name="selanjutnya_ek1_string">Selanjutnya</string>
    <string name="kembali_string">Kembali</string>
    <string name="surat_masuk_ek15_string">SuratMasuk</string>
    <string name="surat_keluar_ek9_string">SuratKeluar</string>
    <string name="arsip_ek9_string">Arsip</string>
    <string name="buat_nota_ek16_string">BuatNota</string>
    <string name="catatan_string">Catatan</string>
    <string name="kirim_string">Kirim</string>
    <string name="kembali_ek1_string">Kembali</string>
    <string name="surat_masuk_ek17_string">SuratMasuk</string>
    <string name="surat_keluar_ek10_string">SuratKeluar</string>
    <string name="arsip_ek10_string">Arsip</string>
    <string name="buat_nota_ek18_string">BuatNota</string>
    <string name="tanda_tangan_ek3_string">Tanda Tangan</string>
    <string name="kembali_ek2_string">Kembali</string>
    <string name="surat_masuk_ek19_string">SuratMasuk</string>
    <string name="surat_keluar_ek11_string">SuratKeluar</string>
    <string name="arsip_ek11_string">Arsip</string>
    <string name="buat_nota_ek20_string">BuatNota</string>
    <string name="pilih_lampiran_string">Pilih Lampiran</string>
    <string name="kembali_ek3_string">Kembali</string>
    <string name="preview_surat_string">Preview Surat</string>
    <string name="surat_masuk_ek21_string">SuratMasuk</string>
    <string name="surat_keluar_ek12_string">SuratKeluar</string>
    <string name="arsip_ek12_string">Arsip</string>
    <string name="buat_nota_ek22_string">BuatNota</string>
    <string name="kembali_ek4_string">Kembali</string>
    <string name="preview_surat_ek1_string">Preview Surat</string>
    <string name="surat_masuk_ek23_string">SuratMasuk</string>
    <string name="surat_keluar_ek13_string">SuratKeluar</string>
    <string name="arsip_ek13_string">Arsip</string>
    <string name="buat_nota_ek24_string">BuatNota</string>
    <string name="kembali_ek5_string">Kembali</string>
    <string name="download_string">Download</string>
    <string name="preview_surat_ek2_string">Preview Surat</string>
    <string name="surat_masuk_ek25_string">SuratMasuk</string>
    <string name="surat_keluar_ek14_string">SuratKeluar</string>
    <string name="arsip_ek14_string">Arsip</string>
    <string name="buat_nota_ek26_string">BuatNota</string>
    <string name="kembali_ek6_string">Kembali</string>
    <string name="preview_surat_ek3_string">Preview Surat</string>
    <string name="surat_masuk_ek27_string">SuratMasuk</string>
    <string name="surat_keluar_ek15_string">SuratKeluar</string>
    <string name="arsip_ek15_string">Arsip</string>
    <string name="buat_nota_ek28_string">BuatNota</string>
    <string name="pillih_lampiran_string">Pillih Lampiran</string>
    <string name="kirim_surat_string">Kirim Surat</string>
    <string name="pilih_file_string">Pilih File</string>
    <string name="contoh_file_pdf_string">Contoh_File.pdf</string>
    <string name="contoh_file2_pdf_string">Contoh_File2.pdf</string>
    <string name="surat_masuk_ek29_string">SuratMasuk</string>
    <string name="surat_keluar_ek16_string">SuratKeluar</string>
    <string name="arsip_ek16_string">Arsip</string>
    <string name="buat_nota_ek30_string">BuatNota</string>
    <string name="apakah_anda_yakin__string">Apakah anda yakin?</string>
    <string name="perubahan_yang_dilakukan_tidak_akan_tersimpan__string">Perubahan yang dilakukan tidak akan tersimpan.</string>
    <string name="eselon_string">Eselon</string>
    <string name="ix_string">IX</string>
    <string name="keluar_string">Keluar</string>

    <string-array name="Departemen_Pengirim">
        <item>Departemen Pemasaran</item>
        <item>Departemen Akutansi</item>
        <item>Departemen SDM</item>
        <item>Departemen Keuangan</item>
        <item>Departemen Dafasum</item>
        <item>Departemen Litbang</item>
        <item>SPI</item>
        <item>Departemen Produksi</item>
        <item>Departemen Teknik</item>
    </string-array>

    <string-array name="Departemen_Tujuan">
        <item>Departemen Pemasaran</item>
        <item>Departemen Akutansi</item>
        <item>Departemen SDM</item>
        <item>Departemen Keuangan</item>
        <item>Departemen Dafasum</item>
        <item>Departemen Litbang</item>
        <item>SPI</item>
        <item>Departemen Produksi</item>
        <item>Departemen Teknik</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>