<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		login_awal
	 *	@date 		Wednesday 13th of July 2022 03:46:24 AM
	 *	@title 		ANDROID EXPORT
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/login_awal" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_login_awal_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__login_awal_ek2"
					android:background="@drawable/_bg__login_awal_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="386dp"
					android:layout_height="896dp" />

				<ImageView android:id="@+id/background_1"
					android:src="@drawable/background_1"
					android:contentDescription="background_1"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="431dp"
					android:layout_height="926dp" />


				<RelativeLayout android:id="@+id/password"
					android:layout_marginTop="561dp"
					android:layout_marginStart="25dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_2"
						android:background="@drawable/rectangle_2_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="33dp"
						android:layout_width="372dp"
						android:layout_height="40dp" />

					<TextView android:id="@+id/password_ek1"
						android:fontFamily="Arial"
						android:textSize="20sp"
						android:textColor="@color/password_ek1_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="113dp"
						android:layout_height="37dp"
						android:text="@string/password_ek1_string"
						 />

					<TextView android:id="@+id/masukan_password"
						android:fontFamily="Arial"
						android:textSize="15sp"
						android:textColor="@color/masukan_password_color"
						android:layout_marginLeft="40dp"
						android:layout_marginTop="43dp"
						android:layout_width="151.5dp"
						android:layout_height="27.5dp"
						android:text="@string/masukan_password_string"
						 />


					<RelativeLayout android:id="@+id/group"
						android:layout_marginTop="41dp"
						android:layout_marginStart="10dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/vector"
							android:src="@drawable/vector"
							android:contentDescription="vector"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="8dp"
							android:layout_width="20.74dp"
							android:layout_height="14.06dp" />

						<ImageView android:id="@+id/vector_ek1"
							android:src="@drawable/vector_ek1"
							android:contentDescription="vector_ek1"
							 android:layout_marginStart="3dp"
							android:layout_marginTop="0dp"
							android:layout_width="13.83dp"
							android:layout_height="8.2dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/username"
					android:layout_marginTop="455dp"
					android:layout_marginStart="25dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_1"
						android:background="@drawable/rectangle_1_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="33dp"
						android:layout_width="372dp"
						android:layout_height="40dp" />

					<TextView android:id="@+id/nip"
						android:fontFamily="Arial"
						android:textSize="20sp"
						android:textColor="@color/password_ek1_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="59dp"
						android:layout_height="37dp"
						android:text="@string/nip_string"
						 />

					<TextView android:id="@+id/masukan_nip"
						android:fontFamily="Arial"
						android:textSize="15sp"
						android:textColor="@color/masukan_password_color"
						android:layout_marginLeft="40dp"
						android:layout_marginTop="43dp"
						android:layout_width="111.5dp"
						android:layout_height="27.5dp"
						android:text="@string/masukan_nip_string"
						 />


					<RelativeLayout android:id="@+id/group_ek1"
						android:layout_marginTop="38dp"
						android:layout_marginStart="7dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/vector_ek2"
							android:src="@drawable/vector_ek2"
							android:contentDescription="vector_ek2"
							 android:layout_marginStart="8dp"
							android:layout_marginTop="5dp"
							android:layout_width="9.18dp"
							android:layout_height="9.85dp" />

						<ImageView android:id="@+id/vector_ek3"
							android:src="@drawable/vector_ek3"
							android:contentDescription="vector_ek3"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="25.25dp"
							android:layout_height="27.09dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/logo_pt"
					android:layout_marginTop="62dp"
					android:layout_marginStart="73dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/bunderan_luar"
						android:background="@drawable/bunderan_luar_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="287dp"
						android:layout_height="287dp" />

					<View   android:id="@+id/bunderan_dalem"
						android:background="@drawable/bunderan_dalem_shape"
						 android:layout_marginStart="21dp"
						android:layout_marginTop="23dp"
						android:layout_width="240dp"
						android:layout_height="240dp" />

					<ImageView android:id="@+id/logo_1"
						android:src="@drawable/logo_1"
						android:contentDescription="logo_1"
						 android:layout_marginStart="41dp"
						android:layout_marginTop="43dp"
						android:layout_width="200dp"
						android:layout_height="200dp" />

				</RelativeLayout>

				<TextView android:id="@+id/masuk_akun"
					android:fontFamily="Arial"
					android:textSize="24sp"
					android:textColor="@color/password_ek1_color"
					android:layout_marginLeft="140dp"
					android:layout_marginTop="381dp"
					android:layout_width="160dp"
					android:layout_height="45dp"
					android:text="@string/masuk_akun_string"
					 />


				<RelativeLayout android:id="@+id/button_login"
					android:layout_marginTop="686dp"
					android:layout_marginStart="132dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/_rectangle_3"
						android:background="@drawable/_rectangle_3_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="163dp"
						android:layout_height="52dp" />

					<TextView android:id="@+id/masuk"
						android:fontFamily="Arial"
						android:textSize="24sp"
						android:textColor="@color/_bg__login_awal_ek2_color"
						android:layout_marginLeft="53dp"
						android:layout_marginTop="12dp"
						android:layout_width="119dp"
						android:layout_height="46dp"
						android:text="@string/masuk_string"
						 />

					<ImageView android:id="@+id/vector_ek4"
						android:src="@drawable/vector_ek4"
						android:contentDescription="vector_ek4"
						 android:layout_marginStart="15dp"
						android:layout_marginTop="12dp"
						android:layout_width="30.66dp"
						android:layout_height="25.16dp" />

				</RelativeLayout>

			</RelativeLayout>










		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>